2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Add needed explicit cast.
	* grub-core/lib/backtrace.c: Likewise.
	* grub-core/net/ip.c: Likewise.
	* grub-core/net/tcp.c: Likewise.
	* grub-core/net/udp.c: Likewise.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wchar.h: Fix typo.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Add final newline in visibility.h.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common: Fix typo.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def (grub-mkfont): Add missing libgnu.a.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (widthspec.h): Fix typo.
	* util/grub-gen-widthspec.c: Likewise.

2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Move ascii.h and widthspec.h generation to a separate build-time-only
	tool.

2013-08-16  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* grub-core/loader/i386/bsd.c (grub_netbsd_add_boot_disk_and_wedge):
	Always fill bootdisk info and improve check for NetBSD disklabel.

2013-08-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.extra-dist: Add util/bin2h.c.
	Reported by: floppym.

2013-08-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Make unifont mandatory for powerpc-ieee1275.

2013-08-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Disable unifont and starfield if no freetype was found.

2013-08-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wchar.h: Fix wchar_t and mbstate_t conflict
	on NetBSD and OpenBSD.

2013-08-15  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: Baseline misplacement fixed.

2013-08-15  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: The number of color mappings is
	reduced. Inheritant options are processed during the theme loading.
